--- a/app/index-async.html
+++ b/app/index-async.html
@@ -38,7 +38,9 @@
       'components/version/interpolate-filter.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['myApp'],{
+          strictDi:true
+      });
     });
   </script>
   <title>My AngularJS App</title>
